force-app/main/default/objects/Lead/fields/OrcamentoDisponivel__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoDisponivel__c</fullName>
    <label>Orçamento disponível</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>