force-app/main/default/objects/Lead/fields/ProdutoInteresse__c.field-meta.xml
<CustomField>
    <fullName>ProdutoInteresse__c</fullName>
    <label>Produto de interesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>