force-app/main/default/objects/Lead/fields/ResultadoPrimeiroContato__c.field-meta.xml
<CustomField>
    <fullName>ResultadoPrimeiroContato__c</fullName>
    <label>Resultado do primeiro contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não contatado</fullName>
            </value>
            <value>
                <fullName>Contatado - Sem devolutiva do cliente</fullName>
            </value>
            <value>
                <fullName>Contatado - Com devolutiva do cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>