force-app/main/default/objects/Lead/validationRules/VR_BlockUnauthorizedStatusTransiction.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_BlockUnauthorizedStatusTransiction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &apos;EmQualificacao&apos;),
 ISPICKVAL(PRIORVALUE(Status), &apos;Novo&apos;),
 NOT( $Permission.CP_LeadQualificationTransiction ),
 NOT($Setup.BypassSettings__c.Enabled__c )
)</errorConditionFormula>
    <errorMessage>Você não possui permissão para alterar o status para &quot;Em qualificação&quot;.</errorMessage>
</ValidationRule>